<resources>
    <string name="app_name">Bag Cost Calculator</string>
    <string name="total_cost_display">Total Cost</string>
    <string name="total_cost">0</string>
    <string name="calculate_button">Calculate</string>
    <string name="middle_button_text">Toast</string>
    <string name="right_button_text">Down</string>
    <string name="result_screen_heading">Here this and that%1</string>
    <string name="random_heading" formatted="true">Here is this one and that 1%% that</string>
</resources>
